localize some liquid files

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+baseurl: /MyDoc_A
+
 defaults:
   -
     values:
       author: "刘杰文"
       # title: "MyDoc_A Library"
       layout: leap_day_customized_v1
+exclude:
+  - **/*.origin.md
