--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-redirect-from
 
 baseurl: /MyDoc_A
 
@@ -12,3 +13,9 @@ defaults:
       layout: leap_day_customized_v1
 exclude:
   - /**/*.origin.md
+  - todo.md
+
+whitelist:
+  - jekyll-remote-theme
+  - jekyll-redirect-from
+  
