--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ defaults:
     values:
       author: "刘杰文"
       # title: "MyDoc_A Library"
-      layout: leap_day_customized_v4
+      layout: leap_day_customized_v5
+      allow_download_doc: true
 
 exclude:
   - /**/*.origin.*
