--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/configure-pages@v3
     - name: Build the site in the jekyll/builder container
       run: |
         docker run \
