--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+        # uses: actions/jekyll-build-pages@v1
+        uses: ./.github/workflow/jekyll-build-pages-latest
         with:
           source: ./
           destination: ./_site
