--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@ collections:
 defaults:
   -
     values:
-      author: "刘杰文"
+      # author: "刘杰文"
       # title: "MyDoc_A Library"
       layout: leap_day_customized_v5.1
-      allow_download_doc: true
+      # allow_download_doc: true
 
+author: "刘杰文"
 allow_download_doc: true
 
 exclude:
